# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/tyhooks/: no_todos.py  stale_version.py  tf_deps.py
tests/: test_no_todo.py  test_stale_version.py  test_tf_deps.py
