[project]
name = "tyhooks"
version = "0.1.2"
authors = [
  { name="Tom Young" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.*",
    "typing_extensions==4.7.*",
    "pytest==7.4.*"
]

[project.scripts]
stale_version = "tyhooks.stale_version:main"

[project.urls]
"Homepage" = "https://github.com/t-young31/pre-commit-hooks"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
